--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ﻿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
-
+# Dependency directory
 /node_modules
