--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "scripts": {
     "start": "node ./boot/www"
   },
+  "engines": {
+    "node": "~6.1.0",
+    "npm": "~3.8.6"
+
+  },
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -13,5 +18,5 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
-  } 
+  }
 }
